--- a/environment.yml
+++ b/environment.yml
@@ -1,14 +1,20 @@
-name: data_challenge_git
+name: data_challenge_llm
 channels:
+  - conda-forge
   - defaults
 dependencies:
-  - python=3.8
+  - python=3.8.12
   - pandas=2.0.3
-  - python-dotenv=0.21.0
-  - ipykernel=6.29.5
-  - openai=1.37.0
-  - pathlib=1.0.1
-  - tiktoken=0.7.0
   - spacy=2.3.7
   - scikit-learn=0.24.2
-  - mysql=0.0.3
+  - sqlalchemy=2.0.30 
+  - sqlite=3.45.3  
+  - mysql-connector-python=8.4.0
+  - swifter
+  - jinja2  
+  - python-dotenv 
+  - ipykernel
+  - pip  
+  - pip:
+      - openai==1.35.3
+      - tiktoken==0.7.0
