--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 pandas==2.0.3
-python-dotenv==0.21.0
-ipykernel==6.29.5
-openai==1.37.0
-pathlib==1.0.1
-tiktoken==0.7.0
 spacy==2.3.7
 scikit-learn==0.24.2
-mysql==0.0.3
+SQLAlchemy==2.0.30
+mysql-connector-python==8.4.0
+sqlite==3.45.3
+swifter==1.4.0
+Jinja2==3.1.4
+openai==1.35.3
+tiktoken==0.7.0
+ipykernel
+python-dotenv
